minor fix to the showHTML view. No longer has awkward horizontal scroll, and should prevent this UX nonstarter throughout app now

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -27,6 +27,8 @@ li, .wrappable {
 html {
   position: relative;
   min-height: 100%;
+  // hack to prevent horizontal overflow problem on showHTML view
+  overflow-x: hidden;
 }
 
 body.full-screen-body-background {
